testsuite/tests/th/T7241.stderr

T7241.hs:7:2: error:
    Same Name in multiple name-spaces:
      type constructor or class ‘Foo’, declared at: T7241.hs:7:2
      data constructor ‘Foo’, declared at: T7241.hs:7:2
    Suggested fix:
      If you bound a unique Template Haskell name (NameU)
      perhaps via newName,
      then -ddump-splices might be useful.
